--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Restaurant Manager</string>
+    <string name="add_new_order">Add new order</string>
+
+    <string name="table_number">Table number</string>
+    <string name="table_number_is">Table №%1$s</string>
+
+    <string name="guests_number">Guests number</string>
+    <string name="guests_number_is">Number of guests is %1$s</string>
+
+    <string name="create_order">Create order</string>
 </resources>
