--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Restaurant Manager</string>
+
     <string name="add_new_order">Add new order</string>
     <string name="create_order">Create order</string>
 
@@ -9,12 +10,19 @@
     <string name="guests_number">Guests number</string>
     <string name="guests_number_is">Number of guests is %1$d</string>
 
+    <string name="add_new_meal">Add new meal</string>
+    <string name="create_meal">Create meal</string>
+
+    <string name="meal_name">Meal name</string>
+
 <!--Bottom navigation menu -->
     <string name="orders">Orders</string>
     <string name="delivery">Delivery</string>
     <string name="account">Account</string>
 
     <string name="share">Share</string>
+    <string name="search_restaurant">Search for restaurant</string>
+
     <string name="order_document">Order document</string>
     <string name="open_document">%1$s</string>
 </resources>
