Completion of Practice №4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Restaurant Manager</string>
 
     <string name="add_new_order">Add new order</string>
+    <string name="manage_orders">Manage orders</string>
     <string name="create_order">Create order</string>
 
     <string name="table_number">Table number</string>
@@ -15,6 +16,17 @@
 
     <string name="meal_name">Meal name</string>
 
+    <string name="sign_in">Sign in</string>
+    <string name="sign_out">Sign out</string>
+
+    <string name="display_role">Role: %1$s</string>
+
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+
+    <string name="moderators">List of Moderators</string>
+
 <!--Bottom navigation menu -->
     <string name="orders">Orders</string>
     <string name="delivery">Delivery</string>
@@ -25,4 +37,5 @@
 
     <string name="order_document">Order document</string>
     <string name="open_document">%1$s</string>
+
 </resources>
